--- a/LWC/Logistic/force-app/main/default/layouts/Invoice__c-Invoice Layout.layout-meta.xml
+++ b/LWC/Logistic/force-app/main/default/layouts/Invoice__c-Invoice Layout.layout-meta.xml
@@ -67,6 +67,10 @@
                 <behavior>Edit</behavior>
                 <field>Total__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Driver__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
